
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/center_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aaffffff">
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/theme_color"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        >
        <ImageView 
            android:id="@+id/topbar_menu_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/topbar_menu_left"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            />
        <TextView 
            android:id="@+id/topbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Wonderful"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:typeface="monospace"
            android:textStyle="bold"
            />
         <ImageView 
            android:id="@+id/topbar_menu_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_edit"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        >        
    </RelativeLayout>
     <RadioGroup
        android:id="@+id/home_radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/table_item_bottom_normal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/home_tab_main"
            style="@style/home_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/home_tab_main_selector"
            android:text="@string/oyx_home_tab_main" />

        <RadioButton
            android:id="@+id/home_tab_message"
            style="@style/home_tab_bottom"
            android:drawableTop="@drawable/home_tab_message_selector" 
            android:text="@string/oyx_home_tab_message"/>"

        <RadioButton
            android:id="@+id/home_tab_add"
            style="@style/home_tab_add_bottom"
            android:drawableTop="@drawable/home_tab_add_selector"
            android:background="@drawable/home_tab_add_background" />

        <RadioButton
            android:id="@+id/home_tab_find"
            style="@style/home_tab_bottom"
            android:drawableTop="@drawable/home_tab_find_selector" 
            android:text="@string/oyx_home_tab_find"/>

        <RadioButton
            android:id="@+id/home_tab_personal"
            style="@style/home_tab_bottom"
            android:drawableTop="@drawable/home_tab_personal_selector" 
            android:text="@string/oyx_home_tab_me"/>
    </RadioGroup>
</RelativeLayout>