<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@drawable/bg_logout_normal" >

  <!--   <ImageView
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/img"
        android:gravity="center"
        android:padding="9dp"
        android:scaleType="centerInside"
        android:src="@drawable/btn_title_back_bg" /> -->
     <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/img"
        android:gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/cyx_back"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ImageTitle"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:contentDescription="@string/img"
            android:gravity="center"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/cyx_vip"
            android:visibility="gone" />

        <TextView
            android:id="@+id/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/input_password"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextTitle_Right"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/map"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        />

</RelativeLayout>