<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/idle_title_search_input_bg"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/in_my_grally"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_poi_lastDetial"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_jiantou_left" />

            <Gallery
                android:id="@+id/my_grally"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/img_poi_nextDetial"
                android:layout_toRightOf="@+id/img_poi_lastDetial"
                android:drawSelectorOnTop="false"
                android:focusable="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:spacing="10dp" />

            <ImageView
                android:id="@+id/img_poi_nextDetial"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_jiantou_right" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_my_grally"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/main_btn_collectPlace"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_collect_bg"
            android:focusable="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/collect_imageview"
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img"
                android:src="@drawable/cyx_ic_collect" />

            <TextView
                android:id="@+id/collect_place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/collect_place"
                android:textSize="14sp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_btn_getRoutePlan"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/btn_nav_bg"
            android:focusable="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_fold_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center"
                android:text="@string/navi"
                android:textSize="14sp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>