<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/amap_main_search" />

    <include
        android:id="@+id/network_layout"
        layout="@layout/amap_main_search"
        android:visibility="gone" />
    

    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/lastLocation_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/latest_location" />

            <TextView
                android:id="@+id/latest_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lasttime_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastLocation_layout"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/time" />

            <TextView
                android:id="@+id/latest_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_notice_loading"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="正在定位..."
            android:textColor="@color/red"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/layout_map"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <com.amap.api.maps.MapView
            android:id="@+id/mMapView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/map_traffic"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/lukuang" />

            <Button
                android:id="@+id/btn_getLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_zoomin"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_location" />

            <Button
                android:id="@+id/btn_zoomin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_zoomout"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_zoom_in" />

            <Button
                android:id="@+id/btn_zoomout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layout_bottom"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_zoom_out" />

            <FrameLayout
                android:id="@+id/layout_bottom"
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                android:layout_alignParentBottom="true" >

                <LinearLayout
                    android:id="@+id/main_layout_buttom"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:id="@+id/main_btn_report_ll"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/btn_stop_driving_bg"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/img"
                            android:gravity="center"
                            android:src="@drawable/ic_report" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="@string/traffic_report_main"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dip"
                        android:layout_height="fill_parent"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/dark_black"
                        android:clickable="true"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:contentDescription="@string/img"
                                android:gravity="center"
                                android:src="@drawable/coin_s" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:gravity="center"
                                android:text="@string/X"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/gold_coin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:singleLine="true"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="23sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="1dip"
                        android:layout_height="fill_parent"
                        android:background="#ffffff" />

                    <LinearLayout
                        android:id="@+id/main_btn_stop_driving_ll"
                        android:layout_width="0dip"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/btn_stop_driving_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1" >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/img"
                            android:gravity="center"
                            android:src="@drawable/ic_stop_driving" />

                        <TextView
                            android:id="@+id/stop_driving_tt"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="2dp"
                            android:gravity="center"
                            android:text="@string/stop_driving"
                            android:textColor="@color/white"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

               
            </FrameLayout>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>